iota.log
*** Error compiling 'iota/command_line/iota_bulletproof.py'...
  File "iota/command_line/iota_bulletproof.py", line 32
    except Exception, e:
                    ^
SyntaxError: invalid syntax

*** Error compiling 'iota/command_line/iota_single_image.py'...
  File "iota/command_line/iota_single_image.py", line 163
    except Exception, e:
                    ^
SyntaxError: invalid syntax

*** Error compiling 'iota/components/iota_cctbx_ha14.py'...
  File "iota/components/iota_cctbx_ha14.py", line 491
    except Exception, e:
                    ^
SyntaxError: invalid syntax

*** Error compiling 'iota/components/iota_input.py'...
  File "iota/components/iota_input.py", line 387
    except Sorry,e:
                ^
SyntaxError: invalid syntax

*** Error compiling 'iota/components/iota_processing.py'...
  File "iota/components/iota_processing.py", line 54
    except Exception, e:
                    ^
SyntaxError: invalid syntax

*** Error compiling 'iota/components/iota_threads.py'...
  File "iota/components/iota_threads.py", line 1116
    except ValueError, e:
                     ^
SyntaxError: invalid syntax

*** Error compiling 'iota/components/iota_utils.py'...
  File "iota/components/iota_utils.py", line 620
    except Exception, e:
                    ^
SyntaxError: invalid syntax

